6task/peerauth-green.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: green-peerauth
  namespace: default
spec:
  selector:
    matchLabels:
      app: green
  mtls:
    mode: STRICT
