6task/istio-blue.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: blue-service-policy
  namespace: default
spec:
  selector:
    matchLabels:
      app: blue
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/default/sa/green-account"]
