6task/istio-green.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: green-service-policy
  namespace: default
spec:
  selector:
    matchLabels:
      app: green
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/default/sa/blue-account"]
